syntax = "proto3";

package work.sunist.project.alioth.rpc.proto;
option go_package = "./alioth";

message AliothProviderRegistrationRequest {
  string service_name = 1; // 实现的服务名称
  string service_version = 2; // 实现的服务版本
  int32 listening_port = 3; // 监听的端口
}

message AliothProviderRegistrationResponse {
  int32 error_code = 1; // 0表示成功，其他表示失败
  string error_message = 2; // 错误信息
  string provider_id = 3; // 实例ID
}

service AliothProviderRegistrationService {
  rpc Register(AliothProviderRegistrationRequest) returns (AliothProviderRegistrationResponse);
}